--- a/examples/nrf/Cargo.toml
+++ b/examples/nrf/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hub75-embassy-nrf-examples"
+name = "hub75-nrf-examples"
 version = "0.1.0"
 edition = "2021"
 resolver = "2"
@@ -27,7 +27,7 @@ embassy-futures = "0.1"
 embassy-sync = { version = "0.7", features = ["defmt"] }
 
 # HUB75 driver
-hub75-embassy = { path = "../..", features = ["embedded-graphics", "defmt"] }
+hub75 = { path = "../..", features = ["embedded-graphics", "defmt"] }
 
 # Graphics
 embedded-graphics = "0.8"
@@ -64,15 +64,15 @@ nrf52833 = ["embassy-nrf/nrf52833"]
 nrf52840 = ["embassy-nrf/nrf52840"]
 
 # Panel size presets (matching main crate)
-size-32x16 = ["hub75-embassy/size-32x16"]
-size-64x32 = ["hub75-embassy/size-64x32"]
-size-64x64 = ["hub75-embassy/size-64x64"]
-size-128x64 = ["hub75-embassy/size-128x64"]
+size-32x16 = ["hub75/size-32x16"]
+size-64x32 = ["hub75/size-64x32"]
+size-64x64 = ["hub75/size-64x64"]
+size-128x64 = ["hub75/size-128x64"]
 
 # Color depth options (matching main crate)
-color-4bit = ["hub75-embassy/color-4bit"]
-color-6bit = ["hub75-embassy/color-6bit"]
-color-8bit = ["hub75-embassy/color-8bit"]
+color-4bit = ["hub75/color-4bit"]
+color-6bit = ["hub75/color-6bit"]
+color-8bit = ["hub75/color-8bit"]
 
 [[bin]]
 name = "basic_display"
