--- a/examples/nrf/Cargo.toml
+++ b/examples/nrf/Cargo.toml
@@ -6,7 +6,8 @@ resolver = "2"
 
 [dependencies]
 # Embassy dependencies
-embassy-executor = { version = "0.7", default-features = false, features = [
+embassy-executor = { version = "0.7", features = [
+  "task-arena-size-32768",
   "arch-cortex-m",
   "executor-thread",
   "defmt",
@@ -15,13 +16,14 @@ embassy-executor = { version = "0.7", default-features = false, features = [
 embassy-time = { version = "0.4", default-features = false, features = [
   "defmt",
   "defmt-timestamp-uptime",
+  # "tick-hz-32_768",
 ] }
-embassy-nrf = { version = "0.5", default-features = false, features = [
+embassy-nrf = { version = "0.5", features = [
   "defmt",
   "time-driver-rtc1",
   "gpiote",
   "unstable-pac",
-  "rt",
+  "time",
 ] }
 embassy-futures = "0.1"
 embassy-sync = { version = "0.7", features = ["defmt"] }
