--- a/examples/nrf/Cargo.toml
+++ b/examples/nrf/Cargo.toml
@@ -53,6 +53,7 @@ panic-probe = { version = "1.0", features = ["print-defmt"] }
 rand = { version = "0.9", default-features = false }
 rand_core = "0.9"
 rand_chacha = { version = "0.9", default-features = false }
+static_cell = "2.1.1"
 
 [profile.release]
 debug = 2
